# l3d_rs

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  crates-publish.yml  python-publish.yml  release.yml
L3dApps/: README.md
L3dApps/L3dApp/: project.yml
L3dApps/L3dApp/.swiftpm/xcode/package.xcworkspace/xcuserdata/htr.xcuserdatad/: UserInterfaceState.xcuserstate
L3dApps/L3dApp/L3dApp/: ContentView.swift  L3dViewerApp.swift  OBJLoader.swift
L3dApps/android-lib/: README.md
crates/l3d-egui/: Cargo.toml  README.md  Trunk.toml  index.html
crates/l3d-egui/src/: lib.rs  main.rs  viewer.rs
crates/l3d-ffi/: Cargo.toml  README.md
crates/l3d-ffi/src/: lib.rs
crates/l3d-python/: Cargo.toml  pyproject.toml
crates/l3d_rs/tests/data/: minimal.l3d
scripts/: test-ci-locally.sh
src/: lib.rs  tests.rs
src/l3d/: geometry.rs  header.rs  mod.rs  structure.rs
tests/data/: recessed_round.l3d
tests/data/recessed_round/: structure.xml
