[package]
name = "l3d_rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Holger Trahe <trahe@mac.com>"]
description = "L3D (Luminaire 3D) file parser for Rust - parse 3D luminaire geometry with transformation matrices, designed for WASM/WebGL rendering"
documentation = "https://docs.rs/l3d_rs/"
repository = "https://github.com/holg/l3d_rs"
homepage = "https://github.com/holg/l3d_rs"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["l3d", "gldf", "lighting", "3d", "luminaire"]
categories = ["parsing", "graphics", "wasm"]
exclude = [
    "tests/data/*",
    ".idea/*",
    ".github/*",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "2", features = ["deflate"], default-features = false }
anyhow = "1.0"
regex = "1"
quick-xml = { version = "0.37", features = ["serialize"] }

[lib]
name = "l3d_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]