[package]
name = "l3d-egui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "L3D 3D viewer - works on desktop and web (WASM) with three-d"
repository = "https://github.com/holg/l3d-rs"
homepage = "https://github.com/holg/l3d-rs"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["l3d", "gldf", "viewer", "lighting", "wasm"]
categories = ["graphics", "rendering", "visualization"]

# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
rfd = "0.15"
tokio = { version = "1", features = ["rt", "macros"] }

[lib]
name = "l3d_egui"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "l3d-viewer"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = []

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
rfd = "0.15"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement",
    "HtmlInputElement", "FileList", "File", "Blob",
    "DragEvent", "DataTransfer", "FileReader",
    "ProgressEvent", "Element", "CssStyleDeclaration"
] }

[dependencies]
l3d_rs = { version = "0.2.1", path = "../l3d_rs" }
log.workspace = true
three-d.workspace = true
three-d-asset.workspace = true
